fixed the flex wrapping on tags

--- a/frontend/scss/partials/_components-cards.scss
+++ b/frontend/scss/partials/_components-cards.scss
@@ -165,6 +165,7 @@ Card styles
       background: rgba(255, 255, 255, 0.2);
       padding: 15px;
       margin: 20px 0;
+      flex-wrap: wrap;
 
       .day {
         text-align: center;
